--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 connect.php
 
+upload_portifolio/971bce5d3bbc1952fad9a6610389185a.jpg
+upload_portifolio/fb92cee5c46ec02bba21cd5cc2ebae58.jpg
+upload_portifolio/4c826a8c0d303a810994acb5ad817309.jpg
