add campo no orcamento / esquema de avaliacao

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ connect.php
 upload_portifolio/971bce5d3bbc1952fad9a6610389185a.jpg
 upload_portifolio/fb92cee5c46ec02bba21cd5cc2ebae58.jpg
 upload_portifolio/4c826a8c0d303a810994acb5ad817309.jpg
+navUsr.php
+upload/8064d1eaa463c316d6f1025a396152df.gif
+upload/52e2fa0115e5c6f9a5d9f5f652bf333f.jpg
