base carrosel encadeado

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ upload_portifolio/4c826a8c0d303a810994acb5ad817309.jpg
 navUsr.php
 upload/8064d1eaa463c316d6f1025a396152df.gif
 upload/52e2fa0115e5c6f9a5d9f5f652bf333f.jpg
+upload_portifolio/6ea16f91ddca7066d813daaa684442c4.jpg
+upload_portifolio/17d5b2a5de451fdad7107c74ec18d613.jpg
+upload_portifolio/64507922a0a3b1bdbc2556a4672e1ce1.jpg
+upload_portifolio/fc5273ef705811c7fbb9259c7f4fca05.jpg
+upload_portifolio/76c71b4405fce5288a0063c94c6e75ad.jpg
