--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ upload_portifolio/17d5b2a5de451fdad7107c74ec18d613.jpg
 upload_portifolio/64507922a0a3b1bdbc2556a4672e1ce1.jpg
 upload_portifolio/fc5273ef705811c7fbb9259c7f4fca05.jpg
 upload_portifolio/76c71b4405fce5288a0063c94c6e75ad.jpg
+upload_portifolio/7c9c9dabbde4ac45c6f0bfc140fcd9c6.jpg
+upload_portifolio/e8e392701f3542bd26ff622b24a2057b.jpg
