carrosel de portifolio

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ upload_portifolio/fc5273ef705811c7fbb9259c7f4fca05.jpg
 upload_portifolio/76c71b4405fce5288a0063c94c6e75ad.jpg
 upload_portifolio/7c9c9dabbde4ac45c6f0bfc140fcd9c6.jpg
 upload_portifolio/e8e392701f3542bd26ff622b24a2057b.jpg
+upload_portifolio/f2e964cb460cbf979249af64eb3086df.jpeg
+upload_portifolio/4076ece9dfec300d19a6c98ebe3d93fd.jpg
+upload_portifolio/5f07d99f684f5c393911df76dabba044.jpg
+upload_portifolio/6842f6ac9958a98d795bd82370453407.gif
+upload_portifolio/1d084e6ed53020d077d7ca6efd8c9d33.jpg
