--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ upload_portifolio/4076ece9dfec300d19a6c98ebe3d93fd.jpg
 upload_portifolio/5f07d99f684f5c393911df76dabba044.jpg
 upload_portifolio/6842f6ac9958a98d795bd82370453407.gif
 upload_portifolio/1d084e6ed53020d077d7ca6efd8c9d33.jpg
+upload_portifolio/7bf252102ad0203f78ba65c83d4791c4.jpeg
+upload_portifolio/c8023b4827f7a5b2c71c211e5149775c.jpeg
+upload_portifolio/d9f8d4817b471aa0b7830d84ce31d536.jpeg
