--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "tecnomade"]
-  path = https://github.com/5h3n0/tecnomade/new/main
-  url = https://github.com/5h3n0/tecnomade/new/main
-
-
-
+  path = tecnomade
+  url = https://github.com/5h3n0/tecnomade.git
